--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Go
+name: test
 
 on:
   push:
@@ -7,19 +7,16 @@ on:
     branches: [ master ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Go
+    - name: checkout
+      uses: actions/checkout@v2
+    - name: install go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15
-
-    - name: Build
+        go-version: 1.16
+    - name: build
       run: go build -v ./...
-
-    - name: Test
+    - name: test
       run: go test -v -race ./...
