--- a/settle.yaml
+++ b/settle.yaml
@@ -82,7 +82,6 @@ brew:
     - calibre
     - discord
     - docker
-    - dotnet
     - font-source-code-pro
     - font-source-code-pro-for-powerline
     - kitty
@@ -99,7 +98,6 @@ brew:
     - vlc
 
 zsh:
-  zsh4humans: true
   history:
     size: 50000
     share_history: true
@@ -124,26 +122,6 @@ zsh:
     - {name: vimrc, value: "nvim $DOTFILES/nvim.yaml"}
     - {name: zshrc, value: "nvim $DOTFILES/settle.yaml"}
   prefix: |
-    zstyle ':z4h:' auto-update      'no'
-    zstyle ':z4h:bindkey' keyboard  'mac'
-    zstyle ':z4h:' start-tmux       no
-    zstyle ':z4h:' term-shell-integration 'yes'
-    zstyle ':z4h:autosuggestions' forward-char 'accept'
-    zstyle ':z4h:fzf-complete' recurse-dirs 'no'
-    zstyle ':z4h:direnv'         enable 'no'
-    zstyle ':z4h:direnv:success' notify 'yes'
-    zstyle ':z4h:ssh:*'                   enable 'no'
-    # Anything that requires I/O must be done at this point.
-    z4h init || return
-
-    z4h bindkey undo Ctrl+/   Shift+Tab  # undo the last command line change
-    z4h bindkey redo Option+/            # redo the last undone command line change
-
-    z4h bindkey z4h-cd-back    Shift+Left   # cd into the previous directory
-    z4h bindkey z4h-cd-forward Shift+Right  # cd into the next directory
-    z4h bindkey z4h-cd-up      Shift+Up     # cd into the parent directory
-    z4h bindkey z4h-cd-down    Shift+Down   # cd into a child directory
-
-    autoload -Uz zmv
-  suffix: |
     # hello everybody
+  suffix: |
+    # goodbye!
